--- a/.github/workflows/001-dynamic-secrets.yaml
+++ b/.github/workflows/001-dynamic-secrets.yaml
@@ -18,3 +18,16 @@ jobs:
             - name: Use var and secret from env
               shell: bash 
               run: echo '${{ vars.USERNAME }}:${{ secrets.PASSWORD}}'
+
+    get_target_env:
+        name: Get target env 
+        runs-on: ubunt-latest
+        outputs: 
+            target_env: ${{ steps.set_result.outputs.taret_env }}
+        steps:
+            - name: Set env based on branch
+              id: set_results
+              shell: bash 
+              run: |
+                echo "Branch: ${{ github.ref_name }}"
+                echo "target_env=${{ github.ref_name}}" >> $GITHUB_OUTPUT
