add automated job

--- a/.github/workflows/001-dynamic-secrets.yaml
+++ b/.github/workflows/001-dynamic-secrets.yaml
@@ -21,7 +21,7 @@ jobs:
 
     get_target_env:
         name: Get target env 
-        runs-on: ubunt-latest
+        runs-on: ubuntu-latest
         outputs: 
             target_env: ${{ steps.set_result.outputs.taret_env }}
         steps:
@@ -31,3 +31,17 @@ jobs:
               run: |
                 echo "Branch: ${{ github.ref_name }}"
                 echo "target_env=${{ github.ref_name}}" >> $GITHUB_OUTPUT
+        
+    automated_job:
+        name: My Automated Job
+        runs-on: ubuntu-latest
+        needs: get_target_env
+        environment:
+            name: ${{ needs.get_target_env.outputs.target_env }}
+        steps:
+            - name: Print env name
+              shell: bash 
+              run: echo 'Using ${{ github.ref_name }}'
+            - name: Using var and secret from env
+              shell: bash 
+              run: echo ${{ vars.USERNAME }}:${{ secrets.PASSWORD }}
