--- a/.github/workflows/003_learn-github-actions.yml
+++ b/.github/workflows/003_learn-github-actions.yml
@@ -10,4 +10,4 @@ jobs:
               with:
                 node-version: '20'
             - run: npm install -g bats
-            - run: bats v
+            - run: bats -v
