--- a/.github/workflows/004_upload_artifacts.yml
+++ b/.github/workflows/004_upload_artifacts.yml
@@ -11,5 +11,5 @@ jobs:
             - name: Upload output file
               uses: actions/upload-artifact@v4
               with:
-                name: output-log-ile
+                name: output-log-file
                 path: output.log
