--- a/.github/workflows/007_context.yml
+++ b/.github/workflows/007_context.yml
@@ -21,12 +21,11 @@ jobs:
               env:
                 RUNNER_CONTEXT: ${{ toJson(runner) }}
               run: echo "$RUNNER_CONTEXT"
-            # - name: Dump strategy context
-            #   env:
-            #     STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-            #   run: echo "$STRATEGY_CONTEXT"
+            - name: Dump strategy context
+              env:
+                STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+              run: echo "$STRATEGY_CONTEXT"
             - name: Dump matrix context
               env: 
                 MATRIX_CONTEXT: ${{ toJson(matrix) }}
               run: echo "$MATRIX_CONTEXT"
-              
